# rolomux

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.claude/skills/cutting-a-release/: SKILL.md
.claude/skills/live-preview/: SKILL.md
.claude/skills/mockup/: SKILL.md
.claude/skills/vhs-tmux-recording/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/demo/: demo.tmux.conf  focus.tape  organize.tape  search.tape  seed-demo.sh
scripts/: release.sh
src/: debug.rs  input.rs  main.rs  model.rs  search.rs  store.rs  tmux.rs  ui.rs
src/model/: dormant.rs  groups.rs  kill.rs  mod.rs  rename.rs  reorder.rs  search.rs  settings.rs  swap_indicator.rs  types.rs
src/ui/: mod.rs  settings.rs
