[package]
name = "rolomux"
version = "0.16.0"
edition = "2021"
description = "A fast tmux session picker with pinned sessions and a collapsible window tree"
license = "MIT"
repository = "https://github.com/jeffdt/rolomux"
authors = ["Jeff DiTeodoro"]

[[bin]]
name = "rolomux"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
nucleo-matcher = "0.3"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
